[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.120.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
